adding Guard and Spork

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>kidtunes | <%= yield(:title) %></title>
+        <title><%= full_title(yield(:title)) %> </title>
   </head>
   <body>
-    <h1>Contact</h1>
+    <h1>kidtunes</h1>
     <p>
     Interested in kidtunes, you can contact me <a href="http://refford.com/about">here</a>.
     </p>
