--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>kidtunes | <%= yield(:title) %></title>
+        <title><%= full_title(yield(:title)) %> </title>
   </head>
   <body>
-    <h1>Help</h1>
+    <h1>kidtunes</h1>
     <p>
     Nothing much to help with right now, but here's where I'll put FAQs and such.
     </p>
