--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>kidtunes | <%=yield(:title) %> </title>
+    <title><%= full_title(yield(:title)) %> </title>
   </head>
   <body>
-    <h1>Home</h1>
+    <h1>kidtunes</h1>
     <p>
     This is the home for the kidtunes. Where kids can ask their parents to buy them songs and apps from iTunes.
     </p>
