finish layout and routes

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -5,7 +5,7 @@
         <title><%= full_title(yield(:title)) %> </title>
   </head>
   <body>
-    <h1>kidtunes</h1>
+    <h1>Contact</h1>
     <p>
     Interested in kidtunes, you can contact me <a href="http://refford.com/about">here</a>.
     </p>
