--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,5 +4,5 @@
   
   <h2>This is the home page for kidtunes</h2>
     Where kids can ask their parents to buy them songs and apps from iTunes.
-    <%= link_to "Sign up now!", 'signup', class: "btn btn-large btn-primary" %> 
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %> 
 </div>
