--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -5,7 +5,7 @@
         <title><%= full_title(yield(:title)) %> </title>
   </head>
   <body>
-    <h1>kidtunes</h1>
+    <h1>Help</h1>
     <p>
     Nothing much to help with right now, but here's where I'll put FAQs and such.
     </p>
