--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,3 +6,5 @@
     Where kids can ask their parents to buy them songs and apps from iTunes.
     <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %> 
 </div>
+
+<%= link_to image_tag("kidtuneslogo.gif", alt: "kidtunes"), 'http://kidtun.es/' %>
