--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,29 @@
-<% provide(:title, 'Sign up') %>
+<%= provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+
+<div class="row">
+  <div class="span5 offset2">
+    <%= form_for(@user) do |f| %> 
+    <%= render 'shared/error_messages' %>
+
+    <%= f.label :fname, "First Name" %>
+    <%= f.text_field :fname %> 
+
+    <%= f.label :lname, "Last Name" %>
+    <%= f.text_field :lname %> 
+
+    <%= f.label :email %>
+    <%= f.text_field :email %> 
+
+    <%= f.select :type, [['Kid','Kid'],['Parent','Parent']] %>
+
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+
+    <%= f.label :password_confirmation, "Confirmation" %>
+    <%= f.password_field :password_confirmation %>
+
+    <%= f.submit "Create my account", class: "btn btn-large btn-primary" %> 
+    <% end %>
+  </div>
+</div>
