Add SSL in production

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,6 +15,7 @@
     <%= f.label :email %>
     <%= f.text_field :email %> 
 
+    <%= f.label :type, "Are you a Kid or Parent?" %>
     <%= f.select :type, [['Kid','Kid'],['Parent','Parent']] %>
 
     <%= f.label :password %>
