sign up for kid parent working

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
-<% provide(:title, @user.fname + " " + @user.lname) %> <h1><%= @user.fname + " " + @user.lname %></h1>
+<% provide(:title, @user.fname + " " + @user.lname) %> 
+<h1><%= @user.fname + " " + @user.lname %></h1>
 <%= @user.fname %> <%= @user.lname %>, <%= @user.email %>
